style: fix dark mode style, add middleware

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,6 +3,7 @@
   --text--color: #3b3b3b;
   --data-text-color: #696969;
   --button-bg-color: #a1a1a1;
+  --edit-button-color: #403030;
   --list--bg--color: #fff;
   --button-red-color: #c15050;
   --button-black-color: #2d2d2d;
@@ -42,7 +43,7 @@ a {
   height: 80px;
   background-color: var(--bg-red-color);
   color: var(--list--bg--color);
-  box-shadow: rgb(40, 40, 40) 0px 0px 10px 0px;
+  box-shadow: rgb(25, 25, 25) 0px 0px 10px 0px;
 }
 
 .logo {
@@ -146,10 +147,10 @@ a {
 .listItem {
   display: flex;
   flex-direction: column;
-  background-color: var(--list--bg--color);
+  background-color: transparent;
   padding: 20px;
   margin-bottom: 20px;
-  box-shadow: rgb(224, 224, 224) 0px 2px 4px 0px;
+  box-shadow: rgba(25, 25, 25, 0.2) 0px 2px 4px 0px;
   border-radius: 5px;
 
   opacity: 1;
@@ -211,7 +212,7 @@ a {
   border-radius: 5px;
   padding: 10px;
   color: var(--list--bg--color);
-  background-color: var(--button-black-color);
+  background-color: var(--edit-button-color);
 }
 
 .delBtn {
@@ -300,6 +301,8 @@ a {
   flex-direction: column;
   list-style: none;
   padding: 0;
+  padding-left: 10px;
+  padding-right: 10px;
   margin: 0;
 }
 
@@ -313,10 +316,7 @@ a {
   justify-content: center;
   align-items: flex-start;
   margin: 0;
-  padding: 0;
-  padding-bottom: 10px;
-  padding-top: 10px;
-  padding-left: 10px;
+  padding: 10px;
   margin-bottom: 10px;
 
   box-shadow: rgba(224, 224, 224, 0.51) 0px 0px 0px 1px;
@@ -346,10 +346,10 @@ a {
   padding-left: 10px;
 }
 
-.commentDiv input {
+.commentDiv input[type="text"] {
   width: 80%;
   height: 45px;
-  border-color: var(--button-red-color);
+  border: var(--button-red-color) 1px solid;
 }
 
 .commentDiv button {
@@ -371,35 +371,6 @@ a {
   padding-left: 0;
   padding-bottom: 0;
 }
-
-/* time checker button */
-/* .timeTitleDiv {
-  display: flex;
-  flex-direction: row;
-  width: 100%;
-  align-items: center;
-  margin-top: -25px;
-}
-
-.timeTitleDiv h3 {
-  font-size: 25px;
-  width: 50%;
-}
-
-.timeTestForm {
-  width: 100%;
-} */
-
-/* .getTime {
-  margin-top: 10px;
-  width: 25%;
-  float: right;
-  height: 40px;
-  border-radius: 5px;
-  border: none;
-  background-color: var(--button-red-color);
-  color: var(--list--bg--color);
-} */
 
 /* write, edit page */
 .writeForm,
@@ -423,9 +394,10 @@ a {
 input[type="text"],
 textarea {
   border-radius: 3px;
-  border: 1px solid var(--text--color);
+  border: 1px solid var(--button-red-color);
   margin-top: -20px;
   font-size: 16px;
+  background-color: transparent;
 }
 
 input[type="file"] {
